add trasmission chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:1oVpKmzHdWww0XpSMkMvLIQwAF5oNbRSaM/A1X6ukHFVDJOmJFJtnR9k0uKI0M6OxiGaXeq65wZRpEowVcfvdr0=,iv:qjLLB5LY0DUTWH8WQWHypgrlEs1VJ0irnO90iuNNEQA=,tag:1gU3LYhhGVlGKcW6jlfFGA==,type:comment]
-#ENC[AES256_GCM,data:9egwYDOikgDfAP4bXPUowYpHW47ecH+5CQzxYPTNqLthqVVBhNxFCZY+Flk=,iv:xXgkLQIRa29LDzjLrDFCUw2Jv8u6PRfkBvCBgHSG2z4=,tag:9LMeE9cdmiylFjrw5N8psA==,type:comment]
-VIP: ENC[AES256_GCM,data:FHza+JeNaXXMU5YwjA==,iv:dNOtqCNjjBdjdpV7YiP72oYk+AldNrnag1jV7aw2tO4=,tag:cRHKtZoAhHIASRxCVVgZcg==,type:str]
-#ENC[AES256_GCM,data:K0Lzb4rDMHBozPnz0RMtduWigT2yUGrC8GO1,iv:R7uEHAgzn4JzbyB0/QinFji5WexkT3ToLE5bMENYgJ4=,tag:hp4Jss2PBHJqjw+35yhL4g==,type:comment]
-#ENC[AES256_GCM,data:q2pfkfVN5rMV8ZJ34ura0Iik86PhqzDPxIJhyV9WZXxbSLZ7uUw+cR3dZ5Dweac3I+whZS7O7GmnViwfZiANVfT/3UZbRssUJfL0HPFXMFr0iyLdWbWf/Lk=,iv:XTlJSM/d3TNXwFQtLpVF5AhxzUM00Mhz8+WTWEMnrxw=,tag:MkBa/mIsLSVCXMuiv7N7rA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:NsRX39BZx6dfWTSj5mE=,iv:+eiMnBAVKW4BOg6mnvo/4p+5yezEWJrE4wi28kMODKA=,tag:lQjE+Oy8o6YZssgdsp0rRw==,type:str]
-#ENC[AES256_GCM,data:JZ6A2FvUQ496bBPJOQoiRI33b8duT3S4O9Zjx6aLld6BFw==,iv:itkYjxW/HpzS1TcHQt3O/VknnUE/V7GFdsz4sPbO1DY=,tag:rJ52lRyAoUwrmFoHHqbrmA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:+nWdSboDzV9MAGtvaQ==,iv:8sjGd9Sib4aqvMMJE7VRB/MgDkKqfbLvGkcgBjK5p6c=,tag:6/fiZxSjGAXRujiU2zugZg==,type:str]
-#ENC[AES256_GCM,data:6pIDIYw+Ujk5r9m6eMAdsi61UyE3XIOFteKCEkdpUuaMwA56pA7yCU5WIiefcAA=,iv:gojR1wTgtpajJUKr8DAzqb/dpl3eYQlKS88PUYr/qys=,tag:j460fXFw0IYvMLpcu6rqZw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:bJimhwEl/TzqEF1q5tO+r1a8YmEDtF3WJuPn3L92Bg==,iv:rGyydCvEkuLKF6lIOFr9JH/D91TOuUfi8+h7A2SaLdA=,tag:x8s8MiEmCCFW23JKdrplVA==,type:str]
-#ENC[AES256_GCM,data:KptixhaSsapD9svW3X54Q31Ise6//mOxAJStzDnxGjHi2pSZsemO4hmHQXoNQJqMj3ZFpllU3xvYsaJPPWzr+SkutR4aiGZXZWU1OFwDnjlMsQ==,iv:W4zKJeDiysJrA6tPAy/subXMHAdtcfNLOWdmThmCTXE=,tag:VkvY50NGSZ7UvT51xebvnA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:0NjCMSpd7hhKQGDrbCH/,iv:PK75Lk9KCDu/8SeLDHtVWcDS0Q6cpWYD2xRbcueOcfw=,tag:GbVUsHN/QRo6zC7Og2VhTg==,type:str]
-#ENC[AES256_GCM,data:/IzdeN99B+lgOatSLW+2VM0X2TrCgKiesy/jqXFYdveI,iv:HD3E1IUthj2WvWhs1II6w+wPJ3B/fLrKB608pwCbsis=,tag:eXDxbK0yXUfnghY4N7Hu8w==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:L5c67BDl63lxT+ai2iWp,iv:Ks+ueRFh1IvgOwSWWSPJyMbzcVG+uqk7xPygs7B3gsA=,tag:pyDEDJmarrqbohdMV6LWDg==,type:str]
-#ENC[AES256_GCM,data:wgJh2+WmTuc3F4gEPD3A6wgjRkaO4tyCzfJZMGO3bUGA6HsKsxXfaKC6XoHUu1zaJZcjL+PD3LVTqVcaChXd+gLccGDhGV+bx7c4XY13I5s=,iv:57gUKe7pvCKPFzaquP6glPOl/+WxGGsBwhKfdnbbLXs=,tag:bwJ7WDR7TwQ8JgDoyzbVZA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:9u2F5/oXGm1BkEjP3Qbf,iv:I2EQUw23Yq1AEsvcXxAw8PDhy2SBuh6C8H76kx64Yf0=,tag:dbhjTDBKdhLI8P7jX9/xmQ==,type:str]
-#ENC[AES256_GCM,data:BUxTVAfpyNeQqYG+pRIF98ZKJ8pRvm6ifuzB843Sjv9XcU5p3zl5D61bh6JMnaUAkIoIcoko40B9x1lEak4olvoFT5W2bI4PyFkKSfM0WR/yc/vqjxVo,iv:RTTWzv7lTJPhZ5GrcMrXuJxUUqjNqgkm+p7imZ18/jc=,tag:HDky8RSewX9KPSDrdRP0Ag==,type:comment]
-#ENC[AES256_GCM,data:uPlJ7yDiiSUsHA40evW8Qp3lcKJSSbZBtjGRj9ndP5a6Qo6UhK3WP8obqkq5ybItnCLj6twPmESIqGqPaz3IFBL5NBg7eB5d/A50ctT7DRq0dj8SWz2fwepht2R9NRh0R4cgEMMCt1kpS7vAPY1bZ83oPc2l/Fxxo63O6Q==,iv:fEHKiUhdsXodRa5um98RIGBg+JxNxVREl312Hf03x/Y=,tag:yC1zU5289ApV8Q6A7KNsLg==,type:comment]
-#ENC[AES256_GCM,data:EwJJqH2yODA7jDju4ygPwY7MWhCAMotkP9Q8VavqYTBzXbBaGEAnsJVYUEzGbjzrTnPiUrkt3hPJV266ulb1+n9EW8eizsaHe+s7xPUhAk8=,iv:8+mPJdKH1Gn0gW6prlmEuiwTNMImirf0lgCkFIwBFLI=,tag:Fnrxmicbjtdm4MpnPkpH0w==,type:comment]
-#ENC[AES256_GCM,data:2FCasOO68wIiztMorifZvCcauwcq6qQpdchGnMExNRQ4CgRMgfuSt7j1L8TaEfjHzbTxrW56,iv:NZDwjnIqUIv6yihprICq2C5i/f5Dpy/8xzmwexxzG6g=,tag:clrEkMvF26Ec4VepNYM21w==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:UV9NnKm2xkP2mAaw,iv:P7BW7VJCZdudfWDrooTywWbvFRoBNhis25e7N0wKgOw=,tag:cdTjf9qRK39CQSj7rS4fyQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:6rOSacyN92hDNGwbDJzvpUM=,iv:za6iOZYzMiaStyHX7MA0z4EzEu13cvC35APoqZ68zfE=,tag:dR0qy+y+1HTQm3SspIizkw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:/rYLaLKp1TP6n7toPB67titKvV9caWANenHB+nBA0QQ=,iv:hfuJ+ua6qRhE7k5rw+I551ZtNXfHx1FNGwvXVxwLM2E=,tag:LPKtk24Ezt2Yu1tf7p7bvQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:28ZpHMqNXh8sSUkxv1aCXWbSdBdPRWFLSJualqYaqXoJgaEE8Imddg==,iv:L2bkRI7P8U7CRBCj+NtbVF1joGfQ6ip19CUlC+PD7pQ=,tag:ik5tVoBgWTuFCH3x+4bFUA==,type:str]
-#ENC[AES256_GCM,data:wL083GUtK/jHZlo4yC9m3DxBYpMXwa/mVlNZMonFyNrUcoZYI+1w9XfsmG82HhL4kumJRtUoDoqSbSMIa4VRMQ==,iv:jxqWXBYBsbp3/u0XUMWioFqxyfeOaNoX27PGZeLVHe4=,tag:A7KWifkp1hRGxQIAb7Q7+w==,type:comment]
-#ENC[AES256_GCM,data:1wvf03fXlMupKu7EbbH6pyagEI08UPwv27Il7MIs7RLADSxm9CMwjmJegKTc9gfv2GHEiHZJ8kI=,iv:OJFMzsCPYLjGFDjrH+wzj0GO0a4qyk6WVf0LVrkMfp8=,tag:ylQ0nKOs4Sd0Z1APEYfRiQ==,type:comment]
-#ENC[AES256_GCM,data:2n3M+QWVPQIyO7IuTdGOpof2ZLPv7XXY/g==,iv:Mr4pu2It8s/g4Lq2Nwpv0FJmrRKZRV0Afd8Ykjr05Y4=,tag:I3AL+FZp22RqqxvxxvuQkA==,type:comment]
-#ENC[AES256_GCM,data:hYU4Hh6/zVxqQxuGxJdM3oYyByQL9zSj6MqCDh5EDXRiuXGZF+Jpzgzk761AxlarDx46KsAkEwssLTgCRKh8Sz4kJ5zHCbfY6ZABHS8=,iv:BGRhGof0rUHJKJQZZ7PRg2FhndvNxsZ+7tVBxYszvTE=,tag:13iDmgHolkrsgLauIz07HA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:6yA1tz8Bv8NLpFe3G8X8D1iEJkLMCMRDb/cphtaWgA1+SqtQfPguJnmIpVQMHbUC,iv:xaDPsOONkW9ipsjYHzj8JDboLsMyOMqNZf90ZaydNpE=,tag:xsIO11OMHyVIChC900eA2g==,type:str]
-#ENC[AES256_GCM,data:0xH19KyXqtJ5W7iNJ1vqgqSFR7Rfjys7vjyfhkVYMo8h0KAlMrQQ6KDz2JIbMvlLYKkeus9D4Z0mUoKo4z1EYmvIHClp8Xs=,iv:WDUxP/plyeW1dcXhMwgvKeld8eWEghJO0L4JVmq2oTw=,tag:iLPOBFv/tapAgPnMIPBF7g==,type:comment]
-#ENC[AES256_GCM,data:grlqfiEwM42q5SKhJ9acfSvFENpl0pHwnOmvJCFMzK2XBHUkOwAuRT7xznvNfNb0I1p6JNld,iv:9BdZAMWWUuTCVMgQnU8tl8S/DqvqizOn/NEIeKZlwIQ=,tag:Sc3Cuf6L7m9Dz0YpOxq1jg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:IC+Da/VZcQ==,iv:rRNRfzXOrowZ24siuThJOFpBzuRmEH4ZVZ9kgA8Ej9U=,tag:d25b4kOi/blHG+Dija82zQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:wTHrUslQThvidPbn412jY+d+CDE=,iv:/q30mLwcaQ0hjQt2066CE5wml/1zPzqcwXrXisX+9sw=,tag:J/+em5OQeFRD3Wmg4thhFQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:32vmBbUM/baGE7U=,iv:GsOjXCHPMffV4aNScqNuvTfIR5kz87W0aezkQHtAAaQ=,tag:7PM8DSx+kyos6SgGUcIlxQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:ZEp6vLUe3LWM/WLLRJKS,iv:Gi1BH76xKCF5WrxmL9vxf9mVREjKj0NGh1wmisgY5Rg=,tag:Elvqs/hyKH94IYYUHdiscQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:xOXNUDzu5itehJtoYHWfaxT5+dmo/I8L1Q==,iv:WcS1eWlSVt9Xz8EP4IS11b7IdlII0o4r5Qvnd5C1LMY=,tag:Z0iA01CZDT6fLjK/AuL9PA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:55k1ZByYYLfSyvddsFgVsDvfZ7MmktLEC6ciA6OlTw==,iv:BgDtuM3Sx5sxFi6skzK4MHghs1/zarrXMROctNLCK/E=,tag:joc+BU+hUTLJjbMa7YUE6g==,type:str]
-#ENC[AES256_GCM,data:LoTpPE4dDhiKlns+XJIYYb/+f3TaQKKbP0fXoA+2FwFNXbkjnO4=,iv:4x8WIVRioqzLgpD0q3nW5bCsPQ7PogAOQ8mWIu+Y6XI=,tag:D9w90d6Oqx6SHkX3zQqFEA==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:9qyHXUTW3DiJiBJn1Qb2nTXFWYk=,iv:yEZPFczKmvl2VVQL6gzt5XHtu8Nn8KhWzpCtuv0mIf8=,tag:03/bK1Myj/Y7F4gJDj+nQw==,type:str]
-#ENC[AES256_GCM,data:A+H84sp64AgdsZjKGAo=,iv:pcAApvAUfk1G3iwQQvFxBJrYomkwbhJ9ogYg8tB9svM=,tag:IXFDzrdzy4dWdAgZY3j0Jw==,type:comment]
-PODNET: ENC[AES256_GCM,data:L5rXeMnGh8SoBVFEeg==,iv:zfN9Ak3BacrYUL6rzmWROa3yOMy+BYOcUxF72d0YUxY=,tag:53jrQtqMm47h6axv5AsLIQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:iiZdcdoWgpcEd7ERLw==,iv:L7emp3iSE4hdnsmyJ8xTKAmS5Jlcvgpwwp/osTWf+Rg=,tag:cpQDtnmfAXHHfHGKGHsfgw==,type:str]
+#ENC[AES256_GCM,data:RWof7x9p3aU92tWvpyYuH8Gh03fQ6BBrs4HwzH0gUK/K/J9xkrumpY9IrI2uYcqOdgIgX3iFcZaiKMK7dxSemL8=,iv:etut1KHjR+nyZsCvxH+l+JJInB0WRFuxm5yk+/LQ7EA=,tag:1Qpo+8jbQbzLAA5kxKxTSg==,type:comment]
+#ENC[AES256_GCM,data:j5hErGtggm8QSQJeYo7TCuIszFF3M9QE1NTn79U4aaTAv1JQPfzxjDyTJ9I=,iv:MAT95qg+nZTsMe3wI8/zb+M8KzXDWoID3vonXAbLwVE=,tag:cnUfZ6ocfVnlezqZt2mN1g==,type:comment]
+VIP: ENC[AES256_GCM,data:8s2tCfa4dJrnlf2M6Q==,iv:Wkkk70LSXTUBHq845jUOSzXt5JEQz71r1MUtLa/Tvjs=,tag:Qt7y3z1xEiRgagQQ+ZI/ow==,type:str]
+#ENC[AES256_GCM,data:S6G1aoT+7Yhj8O15+PGFW71SHeorbPxFkIr3,iv:IkUGlALpd7BZ6jCl4x1Nmh0I31dOtE4s4s1+WMBVzcI=,tag:zkpLyDmP+b+RqmCBZzClKQ==,type:comment]
+#ENC[AES256_GCM,data:NRF/NcnI2pSDB8MpNaXW60HmvNC/vmke71NcLSpwGoDN+S8Yi/3MQ/Hi1hocmIJPTenFr5rKxhgHtpnR+QLbWo+CoUy5inQNhCAoWiFA0crGN5w7wzEOdq4=,iv:Yb10HdsBL4gdnXGeC1Whx3z3gDSs0xT9E63ilWBtG3s=,tag:Lia3iRO4i1uElpzK8IXg1A==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:UXHl1nt7ZRDS0jYF3sk=,iv:cwcS3xTceqf3RB932SOafHuqAreXP6lBw9EBJbEHcz4=,tag:GoTtVnlHyJDUG0yqdQSmug==,type:str]
+#ENC[AES256_GCM,data:gCqUezpQ4sWLmD1OzqaJ6BI+NHKqNafMOWZZgW0yCfWajw==,iv:z27NwgET3qDsid9cp01YNcTdHRHEQdiY0ZxttkOvDLo=,tag:Eh3YSTujD0k2HLvu35Tuhg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:ieFpvoB/uAZ6ZV/h7A==,iv:P9WdqStG+ykfVN8fOG6Yjs7mK3utwR/6LJ9wCcEt+Rc=,tag:WDtF0N9uNy/emGlQlXl4sQ==,type:str]
+#ENC[AES256_GCM,data:ee7YT3skwYD2uNf7K5wfFUVugR2fuibkH/jX8yaEb+yaloXTiYXIVXceDkplkvk=,iv:Re3usLtvqybbQk5ZculRJGDQ9P4PQ2ah3oXlRCLeV5Y=,tag:k0VP7mYRLh7v4ZCFdBCGyg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:DGxHO9oeght1eU+tBj37aBxUDdlQCGuDg1+oeeva2g==,iv:kQcyvJ2cbdIaqJKKtEbLqVutGLxfkHqqF4j3j2+50DE=,tag:VvNcs/Qb1/+N9pyADHjx2Q==,type:str]
+#ENC[AES256_GCM,data:UGIYlv4SvHtbyRgx4QejBA8VG43/3gwOMA34le7mo6lujvpVMXVLWO3RzUvOV1tv/4jbHlugzgZr59Xukc+ioYgnsfqj0aFdLtbZdPFX2QBNmQ==,iv:YJJokEvL4GQs01E7iuAt/5WqKOwiOr/Ms/iEO4EHkrw=,tag:j0IkE8oGLVaFhWCMBOYivw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:kInksiKe39h7RKyxJBJs,iv:PITZ4ILg5HEnxtpKB45I4YX6UfRm6dIqvnYWALMhD1k=,tag:YpdUO62RXDPzA7xbJ97gMw==,type:str]
+#ENC[AES256_GCM,data:BbqUk0fJ+xrYDKKRcPseQSCwLWtONnrlXyr41GRqR5Ze,iv:9X9jDMiMdG+q9Xicqf5QEgoKbvRQV9Svib3h1sas4pI=,tag:/G7ppr1XaJs8p7PPf4pqVA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:82CFyCqH8OcSNM7ajzBX,iv:irze6e9y4VpYmymByPiz659UZGADfvTpgN+GPNe081Q=,tag:JoIyI+nW6RDZ9D14p379yQ==,type:str]
+#ENC[AES256_GCM,data:VlOlnzAKqUV28cODzzOmRUML300RltqZkF/7T0osckzJPAMe4ZKucfz3kD1WZTAA9FSla9JqO1QbY/lXttPaXfMnysy6iXJp4on7ajrxq0U=,iv:syUslmIzVwE3sNVbeG1QgNuciop2c/dfw2zKTTkPqQY=,tag:xn0JM0USVZQoI2h2gMwJ+g==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:86Vh8SOMiZMeVLgpDaBf,iv:cUguzBPxCcduOriSh3cwcoubv0wyM78zHr5vT4NJlRU=,tag:tseiwlNuACMoUHFQl3xUbA==,type:str]
+#ENC[AES256_GCM,data:WQbdYUE0peKQAmCvQaab5jb/S7Ha98/avt2tI9L/Qt63mRQJTUzY8U/3RU11dEnpfDn5GRNRw5PB7EVsD5V8fe/0VzqrnHOL1IC3XKsM6FbTDfdODnRs,iv:uI1hfOHnNaWrFHocvENqAaCMKKTpNQeLVEGWHvM8vk8=,tag:NxXFZrbkSxjFFWJ8BFuaeA==,type:comment]
+#ENC[AES256_GCM,data:vXPqWN0EUfXe4Iqd74JE5T9j4nBw6w5SdQwyI87s4E2G+FRNcAXLLPVf863nqPMwiJNv/IHVN1uk8SKhKFLBMkXg7+MCOUBrfFlfSPgO0mYwjiErMhfPOf9Wae4Skq9R4P7JVO4nyEtaGLyrFH9cG6om//rHutie82V/tw==,iv:AigQxZ+Sno/H3OfBYtCXBgXMoruzqTUICmnP9tstfA0=,tag:k5EOMxYHgj+ZnnIpJ32IPg==,type:comment]
+#ENC[AES256_GCM,data:lrlQVHWidl40gl/ANxfhNCQobnZLoeXCW+qSeszu8Q4knoSzHRv7YKQbm6tI7dPbx067dZoSNayyaCO1xYWDYn/8yNjaw0mjFPBbpHHl1Hw=,iv:511RV+PJCYvdXUB1FfPUririA82b8ChmAgjN5fwkPdI=,tag:6C0ZgTeEk0Kzz1vVMN8Hwg==,type:comment]
+#ENC[AES256_GCM,data:XrZKWx8gK33c0OZ9G6h57PLWlywU7fvVTPJ+ja1tOhEnBRYhNnH0nwdKcndBNerFCn/zaaJI,iv:1Sk+gyrwZMbZIQm4QnkIfZM5tT9tLZDFUPTJHbomXNg=,tag:rC2wlatZba00/ZIIXWW37A==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:Le5qsNAYc7FIIsTi,iv:d5Ypd+VRkR7O9cWjYhjVX1LrGGn4U6Y2NfUM0esIcbs=,tag:xOqtfolHLhcaIBE2Zdcobw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:NA8MIGBhLJSgnDIDOTp4OMw=,iv:+yXlTz6uT+nzLa+TPWNGGOnqXNFisTXcDD42byU5hRE=,tag:hOcDueXMv1/pRunBEyYfoQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:idtb+ln7j5X91LkX2M4TCyNr3/gA8UCoPZGrCuKkeT8=,iv:K3siamB/1kRjjdpCeB6VSJ08HWaNCu/MFa/QEAxTzd8=,tag:Bs8R5VL/23v6/KUnUUe87g==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:E/u33jr8l6sLQw1AqhhpHAxKARxYuF5SqYeDf8omrwnRzfk0MOpnJA==,iv:1WU/32FJfKKfTyd0LmRCjKFrGKqR9ltUFCEF6iijXuA=,tag:7ubA94221CoOwAr41LirtA==,type:str]
+#ENC[AES256_GCM,data:ZW+QUx630A/6KU4EoNYTQFatw/0DpijiQVBl5EKS4m0QAWGfV/EjrdlXXKieFuZbAuZr4Y1iJFlvvHbuFritmQ==,iv:A7KZwUSMI7xDv2CmmfzCWz/g+yhv4ksBXsCFzE7VCJ4=,tag:TU4T5a9ziaP0q/uOIG1mLA==,type:comment]
+#ENC[AES256_GCM,data:Y7EOsDnu9vs5lfSUOAM2l6BwQCq1yO9gqBHPKG+vzTyRxgyPsgIuQSuPgUeyh9xeRcn3F7bEhxs=,iv:9dXakQ0+YN2I7C0J81vktkuKeWRoIHiAyc0Aii1DXu8=,tag:BaVpYdynS/gSGOQhkx9csg==,type:comment]
+#ENC[AES256_GCM,data:y5RNFkssvIhLwPAG9WxuWZLpF+q7WvLaqQ==,iv:UuzS+Sv3X/BXwz0RRkDcj7V+JzHvkcCn0M5rYTp6uU4=,tag:LR7XAIdQLkU5ILdEc1I92Q==,type:comment]
+#ENC[AES256_GCM,data:Jjm0TES29NZFg9TS8DDoVzyKYzq5ZI7yAY7dqg7F5LkZxjyoYb1ND1fKJ5Kr/X6DX1uXnWTWfg5VFz6gk4WfrDTwS7aaveHtQ4FqcRA=,iv:aTOij4/MAK4kFhz+gLAGraF1ShCh1oDlNrGr2qezLSU=,tag:lWh3yNP2MWff5IEmrFWOUA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:uhOqykAjBbd6or5kyV5SGK2tDfNR1ZyGzXv6R01m0OFekcbC36yqptfX4WxdV5JQ,iv:vMehsTNeNgHAxv90sKH4j9K/qunPXpTdtF8AWcWFnJk=,tag:Z0D+VhimXTWsjlksMR5jvA==,type:str]
+#ENC[AES256_GCM,data:PDcOA3mSPT3ZABODLRip2E6BY3ceFQdvFsYBWl7pU2SWTsQroPJkargBSZ47UbMlFYWgEF6IUdHzTWFHq2ihywrRHQogbFA=,iv:VhAXgGT6YGTS/e3HRaedz+1eK508J8O9e9YF6gYmQ5k=,tag:/2CbxTetI9e0UXx7RkUbfw==,type:comment]
+#ENC[AES256_GCM,data:R9MYNEVJ1f3GvP3UCu/63uaN+ThkTkOX2CpjaOONsQkMamt0B8Dc8uypuAUZdI1/RVT9QxW0,iv:WdyH26LvTJiE5UTWGA8zAmHTbCTX9/G9+4jKwbevS6E=,tag:hvtL+erMu+58fEIqOfqYng==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:846c1Kdsaw==,iv:0ru8iPExJbazJ4cZ6L1r1+sA1HM+qe8NQ9yNCDaFrQs=,tag:c+SXD33jI6z6TeGF/kl31w==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:muKw9/cSog39E4mDia/juGZW/OI=,iv:7tthOyUS1cKqHMAhtAWcyXnpuM1w03iONeRGUVEZPx8=,tag:i5ZyNiwB/GrN4NG6zxTZSA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:3ruA1BygX+tGWoQ=,iv:K+803GQGk20JJTKwSFnJ1Chy/bhIzMhNbxZC7dLjT74=,tag:QtNg5g9Lo9lpr0Qc6vM/fQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:o7aBj+/0RdQba7To7aYy,iv:r4YimewqoRCxsLtDcZ8s4CK4nbmdLDznhPV9MFm+BdE=,tag:RIsh/BZ+dWsXwRLQmC0ZIg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:3FA4RzFMeQo7go9Pu0oK/B+k2+ErokA6MQ==,iv:u8RHwIt9RbBUqabrp4uXNk7WzITjWvaMi/DUnGn5PI0=,tag:1Iog4EZRGE2UvPKWjrODsA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:DcnTKIq3W7P4g5wMCNhyj9R4HcSPislijbPM5lASaQ==,iv:QE8fgqWqYeKs+FXgAb94xXHvNfXVUKLorrkwUOJpg+w=,tag:NFeJdz1kYOT8vHXxgC1KsQ==,type:str]
+#ENC[AES256_GCM,data:+rRk4qhowuA/wgeXqNmVZjGVw5x48uEsDXZlyzJlz6ALe4HXZ48=,iv:G7Ej/njwlBOtCBO6rGX/lU8KAkWpS3PcYrfgBecg46s=,tag:W2bPj1r9LQoHXF7d9oxLaA==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:CksA3IIhmBVfup2HKp0pHIvzh6I=,iv:dz1ITomlF2xdvmNpuvIfJxCIttxhNHXB5SfhVe8eFlk=,tag:gQmkSzTWyvxqTmHCeDJ/pg==,type:str]
+#ENC[AES256_GCM,data:ckYbXaLbuvimzFGyer8=,iv:P/M5UXMDRri5HInhbqShkhUYk0CwuB4+mIisq5ZrJvw=,tag:zNfMOZVVsY6AVJLB5iayyA==,type:comment]
+PODNET: ENC[AES256_GCM,data:KCB1tvPb2F1xgceDGg==,iv:PuVqQ3U29XXKzwn5zNIOya5Ta3eZvCHviL+rABRQr4E=,tag:igv+5nqEGS+Vz+LBTaFiPw==,type:str]
+SVCNET: ENC[AES256_GCM,data:HKglwkjUz8ox9yeyxA==,iv:r8+yEJqDLZ3pz2dNcg8sFufKzHxrxJK7t3Enz6pvC3g=,tag:Qn+8mAWx41fvJOAm0e7ZrQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1WFJ5bWo4My9TU08zaXln
-            Qm1HMmY5c3VFNFZHTTZiR3pLWmR4Zis5WmdnCmcwRlA4L0dOWjFOZzhyM29GZE93
-            MFhrQjdlZzdBcjZuVlNWc005L0h4akUKLS0tIDVPQ1lCQ29ZZERpemh0TnBtUGEr
-            VmRzQkplTVlmSzZ2L0sybXZSd0lHYWcKA7vrRJWcXFTy43Fp8IbElhlqw5FBE7/r
-            OnbsC9I/6+j9gE5c7DlhsgWxJTvI/2qhYUIFBIYkTWrgjCcZpKZIww==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBndmdYUjhaVURYd3FXb2Q4
+            d1dZOHFmd0EzSHQ5VzdrenVCVDBkc2pCckZJCkJXbjRvd0N0QmlaT0YxZzcrQUFY
+            WGdyWHBGT1NpMXlvMnFNelRKK0F6RlkKLS0tIG1JdFJoMWRWWlJvYmdQeU5Db2U1
+            ZnU0REVyWlphV0F2aFIrQndKOFdCUmsKJl3tfw4x2ZBG2k1T3zRS/f20IAxl5xmZ
+            /KdInO/rjuP0iDo4/tD0iMWHJaigxa3IplIAK2Xw0CJ/BkhDKwydbg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T07:38:02Z"
-    mac: ENC[AES256_GCM,data:UG+cd8aRwm1CI9HPkeV2deOEw/mSGSEkaqcSlCdnbf0WeNHQo4WtR8E3SyBqa7j7iSlo+uamXBdsHJz2WbPzmniPvS0jVmmqfcoE5EqQwSsfL2R+yT5fHyxiW1NaOQnyCOf4ymJ5384smAn6qZnMGyIEHLKqrCGEzTp2JmqWUP8=,iv:TJnWDOa7ck35mxas4QuWJRwHGJr6KR6Ack70vswJgaI=,tag:jwcMja8y8P2FZES1/6IOpA==,type:str]
+    lastmodified: "2025-01-20T08:01:17Z"
+    mac: ENC[AES256_GCM,data:xs9zuZfcPgWbFwt6/J+Q+VBXp0/IpLWJAPKjFTzI7lsfJ87cTC6NtZGQYEVYEEK0di3dDwicPXNKUqX2JXVNPr3VL2XiA6Zz/YgqYdx3gZP+bGYxASCSqmJ8L2iXBHF8UebK+nxdDEKpY00P5ojJa9vpcnRehBXyzY2tUi7DgxQ=,iv:xzggWsQ3XdtmMEsjLrwq0mDE7fE+4fyZTIKfmjSW5ro=,tag:Dn7+VcX7OICNmV3ihDfjNg==,type:str]
     pgp: []
     version: 3.9.2
