--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:wm+z8lipz8Xq5RoxX9+nQiakvRuMdN4/QE2lcMgILNt7QV0oRtNlGSeQ8WMaAFsfgBpnA0U3q15jHzzZRB/hFqk=,iv:yJ35BTcMvt3zsfEdPGEi/ziBU/MDviInFKSN+N9myu4=,tag:tqDA/R7+fkSFxkx9XSjsPg==,type:comment]
-    #ENC[AES256_GCM,data:pPPo5MneX2nWK9whtXjQNIty3Fh1yac3PYnDLBVaa6LnBR0oDjla6rgoS8o=,iv:12wxyT6fSGBTUoHDEKFKyXCBcRSEqBJyj86yJCKPfLA=,tag:3JblBLFZtifPtlZKhT1k2Q==,type:comment]
-    VIP: ENC[AES256_GCM,data:z2Ayxi75BeS7SkEQbA==,iv:TbobviRFo05M7sbc7sHKpYjpJ58Bs+atInEAEprF54U=,tag:mtXl6kOrOs8qVqnVJLGqOA==,type:str]
-    #ENC[AES256_GCM,data:lPtOGKXt8QsPKKpZC9KgNsnXyTTBhydU5FRJ,iv:ZIDxLk4r5YYu0uQyhY9kJXZ47W3YcQtCHwSjczbjJX8=,tag:NrkhpxsbXHE7AuWZtgycig==,type:comment]
-    #ENC[AES256_GCM,data:JQgBxDwVD75ydpxjfgwchtRTeeoH3F6RV3xVuowjSLIfnU1Kn+mkk/2sSJh4liBo48R4zA5CqaYltuiDb3EC6wrG/yrMBJd5huSPhblsQ1BOsLe0WE0HALM=,iv:nLw6BPkpTQWMS2azsjUWJ/pfaASR0k3H+Kj5oP/NpBA=,tag:9m1bzSDtLyB+pOsnRw9GIg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:70dH1SVyg62zl7AJHVc=,iv:7WJCuddINy9dO/tlVsQLJdH+X86dZZ2HgkFUC3xFF9w=,tag:p/vJ3CCWPV/OLkwYBenPpg==,type:str]
-    #ENC[AES256_GCM,data:lolCkRhoM5QEE01zOU5cFeeAy0ssH4XF5txyej2vuGu2NA==,iv:JClXw9Q4o/t22053LfvVM0APrpavRj4xYczpAgh5tWU=,tag:AnC/KzdqNEeOoaIICxtTDA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:bMqmCEL9cJKOZ+2zgw==,iv:hqEMnFloJadugsyKYzZQrVak0Vm5iEf0AtK7FU84rHQ=,tag:mOxJg6b51dJvfwA4swnxDg==,type:str]
-    #ENC[AES256_GCM,data:rNMLb7Ujo9E+yzMtV/meKb0V8wcsT6HJqQ71qWISOapZznYUgEzNbUTPn1jqQCc=,iv:ss6Mcmmb2AxEgR21VbOCLiuAVMeUGDehVk9f9ki/tIU=,tag:16/CzuaQVqhjXgvF6Bqu3w==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:o7SuOp9TixB5K4rdIIgcB9c92HTrEIb7T2YrklbOzQ==,iv:wRRzceVb+PASo07E3zXbSJ38tQnnXvcquv7GQNDRyG0=,tag:WmOMGcDXhFP2W9zPnNl+Kw==,type:str]
-    #ENC[AES256_GCM,data:tBhtdr78cvh0kXtlJTM1sXoNWeXqZSikSQ4L7KVM2F7ZTCvbnWzlANSIBuuXeLl+t+6tHDkzn1jx5eByms7lFlOLy0wKYH1LgnO/STwqwEINog==,iv:vfaLIOYE+6+H3ehTl826NJZs5Fr0uNMFS7WtFJJJK6s=,tag:YQ/OZ8BL70F22lW7tymP4Q==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:BXUqBLXUjCPTUbUM8AFh,iv:nJ/upmNIZ95d9CmmxdY4JzZiGlW4mI4VFUTPibdtca8=,tag:tJj/85zsmT2X5tf7ZQjz/w==,type:str]
-    #ENC[AES256_GCM,data:iltNfj4nues2JO2zAWh3MWbdRJ9hi5zUaCVAfU22n5Ud,iv:HVYt57dZqIitDypHBbbljK198fIDzBLrCyhBhM0dTwA=,tag:DEkOhXKgpUWXISlBOlKjiA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:fWE4Kuax+sAcFE3SUpLJ,iv:dryUTzxldZ6TofzBXCLnuXzG7c2veKEmUBTb27Eci9s=,tag:22jzsxqxNj+5uaeEfIPEKg==,type:str]
-    #ENC[AES256_GCM,data:2gNHtEK49b3uq0y7GMzgKC9Zyc23wVQv+uJ8x1ZmdIXlHVVTZpVcDDvCCe7NqttD+X71p85egFv9ccjB/Xzwt30OAvsnMk42HqzUsFC05I8=,iv:Kd/ZXqH9OAWzmEg/JkK/phMtWmVqIcNV6GrnH6c/+WM=,tag:G6zdZc4oYMNw1+WFsMyz4w==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:cjwEGHk6a46ega+322tS,iv:DxVko/4AfVKhpQd0di+EZg1NtH+ycd2s/v8Z9iuBtD0=,tag:PkkMjF2kHPHMC1FBvSlLvg==,type:str]
-    #ENC[AES256_GCM,data:iM5z1DEojYPUeiTb+Nvn/5IDUzvW2FeSg8XEnBNLeh455SB/T4PQSM3YKkJU4UhLFQQCM3vSZPr2vCyjJ5GOhFQFePyQHDRjoG66RRFboSYDMe1llOpm,iv:Mt9GkZTGtPfBRtbVbulPMxrxqEIb61nqF1XWRbG/Fb4=,tag:krwG3Rjj7Z1/7TURQCBfVQ==,type:comment]
-    #ENC[AES256_GCM,data:2kcne0w1eYlm1Ku1SHnm8S846gg2tgQBHxY4lQnIcvVzUrdjZtWuyXpW7cJEGHwM1VriSQhujkl8rLUuSV7+i5DiOUz9u5YEQjEXZ5EC6pXZYKTyiDbXnVyPiFMsxokeVttCbPaebr+94HrbFVFl1v0ZWgEgnmlLdaRfsw==,iv:+7kvza3q/buJ2/ipvOAE2lhs4TXcvB3qpyu/G+4/2ms=,tag:zhKSucbVAVCovUBYu9Fvxg==,type:comment]
-    #ENC[AES256_GCM,data:gWlQg+TJ/TfCXREb+M9u0oUD8xbjQu0/OdyAhqkGX+Gon++BXayqxbUPOaYxS3Dpm3kCCenhl3px0CpMPSs4c6bGqFndb7iiD2ribC1MCgA=,iv:DXi7n1d6Cz/ujAuGjdXhJqo6CDAhmpWEBf0ulSIpJyM=,tag:FhcoNUkWfzuIQh3960OvHQ==,type:comment]
-    #ENC[AES256_GCM,data:dyLSnCp3qnuW4PYtvtq74pr/vvKVzSwuuy8/wUeKCoon5D2yaJjDC0IeSw7ZW/QfttgrIlj5,iv:PSV7jiPLlvNy3KxAl64pF8I2DZg5lD2l3Ph4B8XSaDs=,tag:jqdwrY33l4o8BM8uJkObkA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:NLPqr+wtJdRRcoQt,iv:bww36zyCFVlEDPjOGuUopJfo4AMVzLMuj97pCZbuT8w=,tag:s8hl9L3vjZFOGy+Z0svz0A==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:jlbyAxpcFAhdA7SWKWVg69g=,iv:hCIUb1OTNDLp/XpyW3AUXtpsEzWixTAJDhnz+GOprI0=,tag:DyKK2IA/TtDuudHd63LXvg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:gP98OUqpENsiEmhDdW5q7OqCRT53626YQI4anuSLLps=,iv:hU6BuPPfszbRM6Yg8u9k6lf4xyOsnJ1L0oSyMuiekTI=,tag:jQE57Wiql2LsE09pRpkLfQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:64RZZs73u+yOSA7TJ/1wU7rGkkILUWDpOnJCZbELuSDZj3gdfHgm8Q==,iv:C8WFSWoego7iX/3ognlssaaIrmhu6Lu/GxhHb7Uw100=,tag:qDjSFh/dERSN/t73pLS5/w==,type:str]
-    #ENC[AES256_GCM,data:30lcKPBEnsF20pYAY55a1th4fCRBx7c+IUwAEf9+KAMHn0ORIXwnhN4T1fB3ICwdcHrWnGrTjLl3+jLpFg2MAg==,iv:N5Y/ougq3KqkqD6j/xmGESc+DxYTla3AOU9QhQkvqfQ=,tag:fveqzuwwWyqP4erX+N4yLQ==,type:comment]
-    #ENC[AES256_GCM,data:vbJ4k9Wgj6WTkn7+WVfhrED/xAwftpwlpFTgSp2KRRT7T2OHZMZqmGK3SeYKuCQbkNdX5WS0w2Y=,iv:L9TqfZqKba4pouzmK+cwnfpI+lRuPfa78dTE+5FWKbU=,tag:FtcteWH/ktfKytunku6oVw==,type:comment]
-    #ENC[AES256_GCM,data:aonxkLwdP5phnhFVLyYp4AgT9CVMlMO8/g==,iv:oOcoF4tpvr+ZyHbWN3Kq760mdhqodDgoEriURw8bRjQ=,tag:Oi+Z8sG3ekPNy55E/3tRTQ==,type:comment]
-    #ENC[AES256_GCM,data:RjtmrzdUkNK5jLS4wD+xdvtsQNnLxMpi+hRqE8dhff8VVYCrmK4IIVUbdhyf4iUyLJKKuVis51sCp8pXmC1k4A0Scn2bi/RFBKQJ0ds=,iv:RbH3RABC3W/5NtYD0ulsqzMMUsUGoPQpmGObjVPUG/Q=,tag:OljuJ7GWdNYRa4Ts9wYMiQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:xTtSKlCeDFVul5CYuI01UknYzZmxDhZS59Gm9YLC1vLXcNZNXO2uOYKamekKzz0R,iv:s8PAv6dKtIYl22opzXULhxp0v9AfashTNDQ8EapV6WI=,tag:mtJAB4h/Pl7KAU3xjNqJkA==,type:str]
-    #ENC[AES256_GCM,data:AynQWcx3i8TEGqU1ypojqdH2BbJ4vr21AS2cem1z9O2ViGZSYC6EBc0xfvQXT5lHwMfqJMuOZ9euM/wyrW0iDLc7TUMG6S0=,iv:or94tkdAR1N6pkssUk0/BvJh20lUj3y4mA4WYlx9JXQ=,tag:/VlsldWuwvpPcD6EgKVD+A==,type:comment]
-    #ENC[AES256_GCM,data:qaIY5RhNsnvX6MmkWEhbAFdN5DVieoBuJmZI6kiWPC4H54kfrkVQW8pwo1d/w89ivYDx/GBx,iv:Fmcnm/5wKZeAqmyN3pun/juszjaqtc1jSBldF2y9iiA=,tag:RBah1WVTxCH9nwR09E+viw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:nEmODEtlew==,iv:6qkckA/iI0RkQV/dppKNRS5GwXU0J9pOTR+fco49VZs=,tag:L1dOn7B799kZP/lW6Igq5w==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rsXqo+/femWBx58qIlM33TzbuNg=,iv:CwfPkxjr7OyGf4lWFbbnl0imN27h4U/C869Y3H3HSl8=,tag:3dba3twBJ/yiRBV0VkrlPg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:CSsWxKZJ6vuqSbI=,iv:+1dfhZ2F0lMlXTGk7aWp1nUjDMjxdq2C450Qwe0acMo=,tag:YDglHruS3EKfWKhjl/sf5A==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:p+2U99dZ+6kHWymjxpFG,iv:8ItPJByBvTzhDIwX9ci0S/8/fP+NgSmWfErMcgqMOTU=,tag:5G/WXCaLmwb578cUZ1w5kA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:CBUpd5VkI8Oz3eFscP/WTyXOxQ3gQgx7xw==,iv:0fCyDjJFj5cyDbz41m6wNERZgt3s0zUr0MMhMvcy8BI=,tag:8MVlaJnGCqMfxyhKafrZeg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:oKAqKs1AdgQpvfANmDz337Y3Bv8PDe6I2qDF/4r01w==,iv:XRboaGr9NXJ3U7+f0ZGJPhVwcm9x0lfQfc7qJS4o/cE=,tag:juT5SYhiJaTGnxC7pvpcSw==,type:str]
-    #ENC[AES256_GCM,data:s+E7iSfGigT/S/RxheTx7dKtY725BrS7HZV831wgG7y4meBK8dg=,iv:gpP/zW8cl1iLoaHqmGPozPI3LVOmq4PyGSGxFC6s+os=,tag:3npeXksesMfvnsFLeU9MFw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Iw0vPXELcholB0ktc7GUfeKgS9c=,iv:6iCG66zcO0MoCn4JpZgfYdOATDN9DNnTqOXJLY5rK60=,tag:6moa4+ekFtKoAITRd0hZMw==,type:str]
-    #ENC[AES256_GCM,data:e5LxZbf40nO31+03RLs=,iv:KjvdgSd0T/jDk6tpull7CQK7RA73gWzCTpzs0Zc6/l8=,tag:zQlslxSz3VwleqgXVTChng==,type:comment]
-    PODNET: ENC[AES256_GCM,data:apyx3qQc/61+O2nUcw==,iv:Y1ZwX2juTa8EfqqfjKGQnNts/ipJb3LEEftekyG7fXU=,tag:XgJugzEc7PEOERvkDOtq0g==,type:str]
-    SVCNET: ENC[AES256_GCM,data:jqTxQKyvFKwPBaoORA==,iv:tsUSBLB+y/hAnRaOy3eQES8P039rAq4dU4P4d54g1H4=,tag:+n9BUUGSFS+L0i8K9kRfZQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Bagj8A==,iv:Y6UGy/dYS79bGUGkuZ6qDPMQoI+emo8rC8kqbmuuBYY=,tag:yTjcQRnNfr7iIMvF2CLcZw==,type:str]
+    #ENC[AES256_GCM,data:DyTMSDIguXHiy/2jsjqmEx/0HptjUUzTF9AYMCMDeQ+kjNE69DLeyQQf9Bubuuw1Ml+N8L3GAJgNRkcwt1MPf+w=,iv:pkurI8vjmWEY2wbF4N9ZGKkNXJmxg1d43fvKje6L7aA=,tag:ClQKZT9BwreLBtireQjxTw==,type:comment]
+    #ENC[AES256_GCM,data:xUO6Caimsui3yxpqkJzFdog95yTMGXwYKD/wQ9bDRlWw44silAJFC7o83P8=,iv:QgmZ9KsWIad+EpfCZPcgBYVixx4KxxKe5y5VNlh3rpg=,tag:cx5YC5AxNH1uLY5n5ZkWWg==,type:comment]
+    VIP: ENC[AES256_GCM,data:cRpym7oR168iZ7/0eQ==,iv:2U8Q2C1L865VIiV1STHLSHWRSb/YlfbtfFBGPYpxvFQ=,tag:xAO4sNfiQTv49eZNvSS1UQ==,type:str]
+    #ENC[AES256_GCM,data:y4qaTdVTPTpkzLE6xQ+vDZwWee/6d2L+dp0A,iv:Ku7Y/HscXJm/k5zWTVwmYUpPRIDKQV6vZKig9Jwuomk=,tag:lhmYtaerKjKDx5ASrDMeEQ==,type:comment]
+    #ENC[AES256_GCM,data:qFP15DAA0IhuVEb08RFgT9jVQfCf45r8B//JGTNeMd9QRaH2z3YnL61lUkK/DADJIIsbaCzDz5f3RfbhQOrveYF/kqguEnjV5UdXIogr5tFFmzhQ0Hy3SRw=,iv:pBVkPq4Wuvkff9d5wKwmO0dwKwQh+i0ov3HnfFqI2gU=,tag:mNGUxeDHeEL4D6sE37ZDkg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:cAh68dtxavw6IDFCUXk=,iv:+C47JpTeIFTDGiCpemwE1AlMnlz/iXtOJHLp/OFEYYQ=,tag:krYamhOaW9vnwKhVnTE3DA==,type:str]
+    #ENC[AES256_GCM,data:INJ5IlxB8OhYZAqoEJwQ/U6lTX+V+OPv0GsT2F9j1tyRmw==,iv:mwirjE1Ydu0Ta33V2dnSWQy9sKuKk3rXKfAxO4E3O2A=,tag:/4oHLwBFGAsuu468ynNDYg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:7Y+seaoHiMUQ/NqKXg==,iv:H86vXln5ll77YDHe3cONWZMj6NFfdLwFT+H4mtNQmc8=,tag:F3/iKMqMibdKVcoUQm+ZPg==,type:str]
+    #ENC[AES256_GCM,data:/7oal2k16UNshWnoURjvLeI1pA3JQm2Nf05dZU3f0T6ocxlpOqRp6hwH9ehahD4=,iv:1unVoRRIhZxDXw37THTzRxd1QxH/dscODpAvPdSKv1s=,tag:pxlOhSGC8e0yJdDPNJvvvA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:sD28uUq8g+1KQ+hYWMNyiej57IYw8nEGARysUynJUQ==,iv:YjVHUQQTI0giyHWWAJipc9zkXJzyZEsa5rChtQNV2yc=,tag:6cT9DshSMkEszCAXRl3Z4w==,type:str]
+    #ENC[AES256_GCM,data:Nj1p+4UU9/M26rpBP4d4TcNIVTjGqka0pWMRILrvumKHTiZ2rpmWLa41XlOIhF4U83LbD2gWh0blk78noviREFClct/f7PiTmtRQRIwmQHUMIQ==,iv:CAIJ2+DzuhdA6o0EHjl80sQ12Cohp4xsvvO/LJ0HV2c=,tag:GWa2NlmULmgDBv8iPi0+3g==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:zAd1rSHPf/6krr8CtkAR,iv:oQ+3ln1W4LU+uefBxPf15cpBQ15sSvc9DdeL4gTf/kM=,tag:khXpSzXbRdoelV93EYBZSQ==,type:str]
+    #ENC[AES256_GCM,data:Av4N0iym8tki0LtdFJlssU7QMInn30QOzo/jW1LJ0UA5,iv:C2684OBKSXxexxvrvJjQDgD7bUheled36zn0fxTItYc=,tag:cCIiV75KPHfOR3qbGyVLbw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:KmE3aUa6zd+T7cQo5z7E,iv:5lnz0iJ1LMjdlfurpL02BN9ULHmM4be/xBO01TmLiQg=,tag:co58S5+kFVTARwpiCecx8w==,type:str]
+    #ENC[AES256_GCM,data:sIC9WTJg0R09QRzOGHPdmGX2oBWmzPkq2NEUx5Z8bkYD10ceOC0U/Na8fuXFLeOyo7NzAP1rAdQajtc6OfiBh7y+76KcXQ412+pP45P8bwk=,iv:RJY2K8/W8WL2Qw5RtVutdPAVlY3RkbY3pGgBZZW7Ulg=,tag:3RMBFTykINPDHd/xnaWTSA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:8KNtmy4qYw4hjMoM55FG,iv:rUTlMAIa0YnCQ26kdgyyCKxzAr1KV4FQ1ga/2uQK5QE=,tag:g0n+kmF0RRy78yn4to8TJg==,type:str]
+    #ENC[AES256_GCM,data:ElQu6S3PwYcDvpUop0iGXzrzA+6IPU4JQzrqsx9lnB0hxKFpBTeBT2H5d2Dv0kq4g6HxZaHQq2YO2AhHyoJSP+6C5sPFVuIx4lWa3NeSX1pzz5CNuG2F,iv:B7vXXn5ojH7Jaa7GOsQc7vMfhQCYlQQXwMeMOzLqJ48=,tag:WT1uM4E8CbXmFThivrT8XA==,type:comment]
+    #ENC[AES256_GCM,data:IAIXO8icXic0FSGxRJLSePNlbNTouL7t3FUwhu5fQBfeOUmyH7SpuAeE+LZlZ2zKMkOA3YJXXKlxrQa2RCXGKfiaK5ZmtM8WI1f+LyxnQUaFUZUjSDpcQyD28buFIa1CRpL4kcabERntYf+Qud1uMiUgDbTiiLr2lMAwQw==,iv:5zLWVJRPXarVVJCymLpWraBVtR4p5GUi3s3I7YXUb6I=,tag:9X3KG5z1OaEv1Q/CwH1jjg==,type:comment]
+    #ENC[AES256_GCM,data:Ov1sMl4xqEcfLVmOJ4yKaxEsQmMJ+XUDRmuts9tBvilUg06EQf99qQlPNcI1nr2QErVU5C7BAptfowu7da9OeaxAhMY+sXcjy2ti9Cgo2YY=,iv:1ilNkNsNghqGkjS5zBYJSJ243lJtaMmxdSdjPRsXTec=,tag:Drr0Le37Xm5vq3dPp/KFRg==,type:comment]
+    #ENC[AES256_GCM,data:u3DLgsbUyvfyjErGHalTobC3AL98R3Qbh2tK80UqjflHdDHy+R15W1PzxirXojVHGEoeHD74,iv:t5j3ZGdlJf3+l3aLNg40AX3BMjFA4nfza5+hBb4K2v0=,tag:n1FIIG9t+SvqeuOTDOqqlg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:mVKRr64+F6sO6pep,iv:9D+4DTKOggJRRLEhMWWnlil8dmixCYKrhO+2i5lGG5g=,tag:ZhGl44v9sND/LIEUHvvIGA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:VrFu0nW5tkliBKGDMuX3LLU=,iv:6DLG0cE9Xk55m7QiF94jF59xh91dqdyZCinPHT30Sb4=,tag:m6WsRQ6ySLuCqhUr489npQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:6uVj8lyMUAgJqFCc5qRwY1S6eNTteqs293wSfEWTiAQ=,iv:nhtXeK/TZ5QLsSPMDa/8/cFnukp/lqu1Hm3HrABPUXY=,tag:b/IXkiSNQaNm3TQGax22Xw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:js+giw9mvsQlcNvlXdCWUibyrC0243LqhwXlC3/SRCa6iXz2vUGneg==,iv:bnOiERNawiZFe9/GC2xQI37+4P5PNffS6jub8pbPNFI=,tag:8s/4DIWMzr9b555/IANzyg==,type:str]
+    #ENC[AES256_GCM,data:3Zf0JcSdpM5+B2FO6Ph/a4v4+1vPdiXL/BlO0yRaNkPi0Vg1bwpk1jLW5a6cMi0xvcS4j6jChdgQyD5vtexWog==,iv:L3EZmXTtY+ldn4JoCTp7vtNMdf8GpvHfeeBfD+nehJo=,tag:GQ/NpdVmCYSvPyQ8YsOcpA==,type:comment]
+    #ENC[AES256_GCM,data:2yMVei+bB4hFx+pvLu5M0PyhiwaQaqQ+T+0cHyfldnqb5Mb5b/tswfl7aH7mMffSFDkn7Y1VqpM=,iv:yJEGiCE0G+0fAYRN6N3EahINGDiBg1oaBVYgyT42lvc=,tag:ckdYG300Up+lBXjsA6HPBg==,type:comment]
+    #ENC[AES256_GCM,data:KwibGhYNVMrrqIeMbo2t840uFQPatwVkQw==,iv:wOvKOBGB+SiEDCmTaVjCy7uApufExkEaWHHAfZeyvS8=,tag:5P2mMSIsUwaLDm3OwpYkQQ==,type:comment]
+    #ENC[AES256_GCM,data:huu0bqXC1GY8WMhsMjeXnI457+BJ/m7GwEfHHG+6dml002tHLAGlXum+wfDY9TehVXI7JvcNGfywpB7ayBqrMcBws7pvW9lRFR5n5oM=,iv:09oS4kl7ucO3Wjj0NUFMweaJ0n0o+kALIseGOxa5Aus=,tag:1SaE3q5qWMtv4CJVt37M1w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:H6zdBiLlHpqImyjEoG0pW/XO9Uk3JqO+XrIjyzTtqmGv83AvpR4UDQvv64luqBTP,iv:C/jr+DWwVPq4tF4rC4xN5RI4kmVnCrXH7rnEDUBkNoU=,tag:wUyyCas5LBBR8GJs5/rtvQ==,type:str]
+    #ENC[AES256_GCM,data:zUnLcS2BbRMcfbWXJZReeW6YTfF8B/qXHwuQ1DBwhqr616qGKyoAlsj9QFLv3vrWaUcAjoji4CwBM9lTJaw3sj6JGXUUYuk=,iv:M5953D9N1YQK1dBgZwyxhG0CQ/ZQoVsXu+Pjx8yKUbI=,tag:lgt9DJ9MTFhAFz0wAOuaKw==,type:comment]
+    #ENC[AES256_GCM,data:mXcpPC5pECSmnLeVZe+aTmCW1wmu/M2GFGUMpXhV4JF1FiY6W8u8WeOEWpn041osQHOr8/rr,iv:ZsNuVT6ExzZsD5+2iW8znOTLnyJ9c/Mbz61nu9FvYeA=,tag:szKUvosqXan8OAnE6NnPGg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:FN4DBV3TTw==,iv:KO9WGsc6pHTQR1kSEwd/OBCmatEp3y9fppgURbQnVJg=,tag:wbA6FStfhZv6hwQR/OmNQw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:K1BVUqwd9joOkZYDIAxKApn2yA8=,iv:2vzkKvbFcNX5LVhLzadhmmojUqe081dWzQvjYfuOa/Q=,tag:M9TGneKluzxYs9oTXxI8Zw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:EwKDHxweuUI71Hw=,iv:hSw/kJUynhT6EOoNHS/RbsbwFdIDfHuAeEAd8fhhlb8=,tag:WHWysmYmuqM20EcRY/DuDA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:ZveMbeJ+lx56FIVaC7A+,iv:AUeEpNH7ZIJIFt5qYUxhhpSAkr/TyRe3vIlXTAxznhQ=,tag:DP/+LKGEbbKUi+1dkiOAZg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:eFuf7QTECmond5oEESOs4okeunPrTTkGqg==,iv:FHOtJqR3szBqhKmgpdHa5nZFUZRLNZYx+mIu6zF6vjU=,tag:n62n7Zb+O6MWBFxg8Us0rQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:3OxS6JvBOLu51XEho1iGjQOyn0OgNvBtH2o6FyLOSg==,iv:fSEktJgVrZDmp7peXqzdgN9kvQ9OACvJrM5MM4n5rDY=,tag:Db8kTBdCpOKdyNTjrXv4dw==,type:str]
+    #ENC[AES256_GCM,data:PDFkzNgOyIugDVGzaIuKQnSOZiMUzoOe55puDeYEbUgdWxipyV4=,iv:mN7W7F0sLM+VthIua0rsQKkKennNc97byVuAUyOf6i4=,tag:pnFPK0DZ4LHMaHYfREtI8Q==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:njwQ249fPPd7gVqEIQr05INEUw8=,iv:KeUEDbRcAnQcwZ6u7NH6KIuBp2oLLUavZrB/ODZ2GDg=,tag:B8bCil9WP4S5OMiZWVUe/Q==,type:str]
+    #ENC[AES256_GCM,data:qQ5uQCjpvD49FZPFli8=,iv:Ki223OO5rmHLfznaiR3VBLYm05EMULmnGlAxvzbhPt8=,tag:RZle/+3AnlCHfElEhPUMHQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:hBEOkViUSfcfhQ+76Q==,iv:zICofhVjSYjaTWqLlbC+hmOfICxo2cPBpnQfG69caPI=,tag:MhzagldSxJEuj2/EXKDzOA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:4KK57lapEx7IpRen7A==,iv:eWBlxnYtth8SJzs7sBtdnB7vjWxusBOORcM8WvxPwLY=,tag:z8Kgd/9WQoL/6DTC9CwNRQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:JvNdSw==,iv:voIW0ft4UhADpMwnpmpwd6lMgH/rVLN4YRUJvrhVbrE=,tag:3n2YG4+dyh8HGZemu3CJcg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYQjlyUUtSQ2N1MWxjZ2hu
-            bE94SW9YenlJYjVDVFEvZ2dTNnZqZDA3cVdNCllxeGE0MEorNFlaR0NWZ0NFUmhZ
-            OXZFK3ZESTc0SlRLS1hOMVE3a0IrZ1EKLS0tIEFMUS9zNXFwQVpacEhMODhYUUpr
-            THFjZmVMbmVtczBFTFJEa1dNTkliWFkK6069jG3+WAuIF+aUP4ikyPmSEuFB194s
-            rkBw8UsX3+3rXYR6BUcB4IES3pcS+uFBpEaQfeAYtvRJvWBejwz9GQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3QysyUkYwb2RwMTRNNTVq
+            TElTcEZsbUVKYW1oRmluaFdNa0w2Nk5FM1dZCktYZzRJcm03VmVNbW5SVktiV3FF
+            c0JIa0RRa1gyVWxPUFVlbUg2TkdJU1UKLS0tIHY2MDM3Z0VUYWgyYURjNnpPTU9h
+            ZVJwQnM2MnZWQW1JTEhsSXJpZ245eWsKn3k92qPJgTk/xUnAUI4OIaXflYkeEsYC
+            xDf76q00itN+QOg+u0evI7mwlybP0kfk7WfVHoyGplZBAqsMyDERTg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T07:38:02Z"
-    mac: ENC[AES256_GCM,data:eBQh2o+kVfYw6PrHclkAXH0kxXMT5dKEelV3rMzsUgRzVKB1PQsrgjbyEpEGSiuR1EzloOuWl93OF6h75+y23b1KsEJ8QS2c5H0Nv2MhcYq6uJUxx0F+MNlSwv6ndJV6zwhmY5MvC7ZR/uRdNb/bMPDLr84SziIPOWz9m3RZGFc=,iv:afcqurV65PcjAcjoCEMM+ER0NC/S5WZC7dvtJkTbBbg=,tag:U49zevdf/3Ts9B8K3wd9eA==,type:str]
+    lastmodified: "2025-01-20T08:01:17Z"
+    mac: ENC[AES256_GCM,data:9iLwLony7p35Xjip2VuzebGpHF8sTQUDIMXHhkZAlN1hVyyAC1fqn9dV4O9yJKeE5Cko02Esu3u1qan6YX39msf43drtoL/c4J8yFnjT9xzLvvedFm++XHM/FHcbymWKducHmeI0hqId6sgztr7MhrH8fb2pYql34tSdLvBHlHI=,iv:y2kznv7N5Xzj5U6qGiHloo/Xv1wTsyd5Wc3sA15pgpI=,tag:ztJonULkhdx/GIVLobcnFQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
